--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,16 +1,14 @@
 <form>
-    <p>
-        <label>Title</label>
+    <app-control class="control" label="Title">
         <input name="title" id="title" />
-    </p>
-    <p>
-        <label>Request</label>
+    </app-control>
+    <app-control label="Request">
         <textarea name="request" id="request" rows="3"></textarea>
-    </p>
+    </app-control>
     <p>
         <button appButton>
             Submit 
-            <span class="icon">֎</span>
+            <span ngProjectAs="icon">֎</span>
         </button>
     </p>
 </form>
