--- a/src/app/dashboard/server-status/server-status.component.html
+++ b/src/app/dashboard/server-status/server-status.component.html
@@ -1,12 +1,19 @@
-<div [class.status]="currentStatus === 'online'">
+<div [class]="{
+    status: true,
+    'status-online': currentStatus === 'online',
+    'status-offline': currentStatus === 'offline',
+    'status-unknown': currentStatus === 'unknown'
+}" [style]="{
+    'font-size' : '64px'
+}">
     @if (currentStatus === 'online') {
-        <p>Servers are online</p>
-        <p>All systems are operational.</p>
+    <p>Servers are online</p>
+    <p>All systems are operational.</p>
     } @else if (currentStatus === 'offline') {
-        <p>Servers are offline</p>
-        <p>Functionality should be restored soon.</p>
+    <p>Servers are offline</p>
+    <p>Functionality should be restored soon.</p>
     } @else {
-        <p>Server status is unknown</p>
-        <p>Fetching server status failed.</p>
+    <p>Server status is unknown</p>
+    <p>Fetching server status failed.</p>
     }
 </div>
